<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdActivity">

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/stars"
        android:layout_width="306dp"
        android:layout_height="94dp"
        android:contentDescription="@string/stars"
        android:src="@drawable/stars"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.187" />

    <ImageView
        android:id="@+id/girl"
        android:layout_width="159dp"
        android:layout_height="166dp"
        android:contentDescription="@string/girl"
        android:src="@drawable/girl"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.837" />

    <ImageView
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/next_button"
        android:src="@drawable/group_643"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.906" />


    <TextView
        android:id="@+id/next_text"
        android:layout_width="125dp"
        android:layout_height="25dp"
        android:text="@string/next_text"
        android:textColor="#3C3F41"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/next_button"
        app:layout_constraintEnd_toEndOf="@+id/next_button"
        app:layout_constraintStart_toStartOf="@+id/next_button"
        app:layout_constraintTop_toTopOf="@+id/next_button" />

    <TextView
        android:id="@+id/elapsedTime"
        android:layout_width="307dp"
        android:layout_height="97dp"
        android:contentDescription="@string/elapsedTime"
        android:textColor="#3C3F41"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/next_button"
        app:layout_constraintHorizontal_bias="0.672"
        app:layout_constraintStart_toEndOf="@+id/girl"
        app:layout_constraintTop_toBottomOf="@+id/stars"
        app:layout_constraintVertical_bias="0.773" />


</androidx.constraintlayout.widget.ConstraintLayout>