<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FourthActivity">

    <View
        android:id="@+id/ToothView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/toothbackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="234dp"
        android:layout_height="53dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/ToothHeading"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toStartOf="@+id/stop_button"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="@+id/ToothView"
        app:layout_constraintTop_toTopOf="@+id/ToothView"
        app:layout_constraintVertical_bias="0.428" />

    <ImageView
        android:id="@+id/stop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/stop_button"
        android:src="@drawable/group_642"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="@+id/ToothView"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="@+id/ToothView"
        app:layout_constraintTop_toTopOf="@+id/ToothView"
        app:layout_constraintVertical_bias="0.351" />

    <ImageView
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/next_button"
        android:src="@drawable/group_643"
        app:layout_constraintBottom_toBottomOf="@+id/ToothView"
        app:layout_constraintEnd_toEndOf="@+id/ToothView"
        app:layout_constraintHorizontal_bias="0.777"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:layout_constraintVertical_bias="0.71" />

    <TextView
        android:id="@+id/stop_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_text"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/stop_button"
        app:layout_constraintEnd_toEndOf="@+id/stop_button"
        app:layout_constraintHorizontal_bias="0.74"
        app:layout_constraintStart_toStartOf="@+id/stop_button"
        app:layout_constraintTop_toTopOf="@+id/stop_button"
        app:layout_constraintVertical_bias="0.434" />

    <TextView
        android:id="@+id/next_text"
        android:layout_width="125dp"
        android:layout_height="25dp"
        android:text="@string/next_text"
        android:textColor="#3C3F41"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/next_button"
        app:layout_constraintEnd_toEndOf="@+id/next_button"
        app:layout_constraintStart_toStartOf="@+id/next_button"
        app:layout_constraintTop_toTopOf="@+id/next_button" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="290dp"
        android:layout_height="166dp"
        android:contentDescription="@string/activityImage"
        android:src="@drawable/toothimage"
        app:layout_constraintBottom_toBottomOf="@+id/ToothView"
        app:layout_constraintEnd_toEndOf="@+id/ToothView"
        app:layout_constraintHorizontal_bias="0.422"
        app:layout_constraintStart_toStartOf="@+id/ToothView"
        app:layout_constraintTop_toTopOf="@+id/ToothView"
        app:layout_constraintVertical_bias="0.876" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="643dp"
        android:layout_height="72dp"
        android:layout_centerVertical="true"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/pb_drawable_1"
        android:indeterminateDuration="600000"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/ToothView"
        app:layout_constraintStart_toStartOf="@+id/ToothView"
        app:layout_constraintTop_toTopOf="@+id/ToothView"
        app:layout_constraintVertical_bias="0.748" />

    <TextView
        android:id="@+id/countdown_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="@+id/progressBar"
        app:layout_constraintStart_toStartOf="@+id/progressBar"
        app:layout_constraintTop_toTopOf="@+id/progressBar"
        tools:text="10:00" />



</androidx.constraintlayout.widget.ConstraintLayout>