<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SixthActivity">

    <View
        android:id="@+id/DressUpView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/breakfastbackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="194dp"
        android:layout_height="54dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/BreakfastTextView"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toStartOf="@+id/stop_button"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="@+id/DressUpView"
        app:layout_constraintTop_toTopOf="@+id/DressUpView"
        app:layout_constraintVertical_bias="0.729" />


    <ImageView
        android:id="@+id/stop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/stop_button"
        android:src="@drawable/group_642"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.975"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/DressUpView"
        app:layout_constraintVertical_bias="0.39" />

    <ImageView
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/next_button"
        android:src="@drawable/group_643"
        app:layout_constraintBottom_toBottomOf="@+id/DressUpView"
        app:layout_constraintEnd_toEndOf="@+id/DressUpView"
        app:layout_constraintHorizontal_bias="0.878"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:layout_constraintVertical_bias="0.838" />

    <TextView
        android:id="@+id/stop_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_text"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/stop_button"
        app:layout_constraintEnd_toEndOf="@+id/stop_button"
        app:layout_constraintHorizontal_bias="0.662"
        app:layout_constraintStart_toStartOf="@+id/stop_button"
        app:layout_constraintTop_toTopOf="@+id/stop_button"
        app:layout_constraintVertical_bias="0.478" />

    <TextView
        android:id="@+id/next_text"
        android:layout_width="125dp"
        android:layout_height="25dp"
        android:text="@string/next_text"
        android:textColor="#3C3F41"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/next_button"
        app:layout_constraintEnd_toEndOf="@+id/next_button"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="@+id/next_button"
        app:layout_constraintTop_toTopOf="@+id/next_button"
        app:layout_constraintVertical_bias="0.48" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="350dp"
        android:layout_height="199dp"
        android:contentDescription="@string/activityImage"
        android:src="@drawable/breakfastgirl"
        app:layout_constraintBottom_toBottomOf="@+id/DressUpView"
        app:layout_constraintEnd_toEndOf="@+id/DressUpView"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintStart_toStartOf="@+id/DressUpView"
        app:layout_constraintTop_toTopOf="@+id/DressUpView"
        app:layout_constraintVertical_bias="0.929" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="643dp"
        android:layout_height="72dp"
        android:layout_centerVertical="true"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/pb_drawable_1"
        android:indeterminateDuration="600000"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/DressUpView"
        app:layout_constraintTop_toTopOf="@+id/DressUpView"
        app:layout_constraintVertical_bias="0.916" />

    <TextView
        android:id="@+id/countdown_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textColor="#FFFFFF"
        android:textSize="50sp"

        app:layout_constraintBottom_toBottomOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="@+id/progressBar"
        app:layout_constraintStart_toStartOf="@+id/progressBar"
        app:layout_constraintTop_toTopOf="@+id/progressBar"
        app:layout_constraintVertical_bias="1.0"
        tools:text="10:00" />


</androidx.constraintlayout.widget.ConstraintLayout>